[package]
name = "iced_custom_highlighter"
description = "A custom highlighter for `iced`'s TextEditor widget that uses your application Theme's colors"
authors = ["pml68 <contact@pml68.dev>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/pml68/iced_custom_highlighter"
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]
rust-version = "1.80"

[dependencies]
syntect = { version = "5.2", default-features = false, features = ["regex-onig"] }
two-face = "0.4.3"

[dependencies.iced_core]
git = "https://github.com/pml68/iced"
rev = "3a491669e7fecf21c261de63dcb1e8069063648f"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lints.rust]
missing_debug_implementations = "deny"
unsafe_code = "deny"
unused_results = "deny"

[lints.clippy]
type-complexity = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
